tests/lang/obr/types/fail/array-size-zero.obr
MODULE Arrays;
    TYPE X = ARRAY 0 OF INTEGER;
END Arrays.
